[workspace]
resolver = "2"
members = [
  "schema-engine/core",
  "schema-engine/connectors/*",
  "schema-engine/datamodel-renderer",
  "schema-engine/sql-schema-describer",
  "query-engine/connectors/*",
  "schema-engine/json-rpc-api-build",
  "query-engine/core",
  "query-engine/dmmf",
  "query-engine/metrics",
  "query-engine/prisma-models",
  "query-engine/schema",
  "libs/*",
  "psl/*",
]

# All path dependencies residing in the workspace directory automatically become members.
# The following shouldn't be considered members but embedded dependencies.
exclude = ["quaint"]

[workspace.dependencies]
psl = { path = "./psl/psl" }
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "io-std", "io-util", "parking_lot", "time"] }
user-facing-errors = { path = "./libs/user-facing-errors" }
uuid = { version = "1", features = ["serde"] }
indoc = "2.0.5"
connection-string = "0.2"
napi = { version = "2.16.11", default-features = false, features = ["napi8", "tokio_rt", "serde-json"] }
napi-derive = "2.16.12"

[workspace.dependencies.quaint]
path = "quaint"
features = [
  "bigdecimal",
  "chrono",
  "expose-drivers",
  "fmt-sql",
  "json",
  "pooled",
  "uuid",
]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 's' # Optimize for size.

[profile.profiling]
inherits = "release"
debug = true
