[package]
name = "builtin-psl-connectors"
version = "0.1.0"
edition = "2021"

[features]
sqlite-create-many = []

[dependencies]
psl-core = { path = "../psl-core" }

connection-string.workspace = true
either = "1.13.0"
enumflags2 = "0.7"
indoc.workspace = true
lsp-types = "0.97.0"
once_cell = "1.20"
regex = "1"
