[package]
edition = "2021"
name = "psl-core"
version = "0.1.0"

[dependencies]
diagnostics = { path = "../diagnostics" }
parser-database = { path = "../parser-database" }
prisma-value = { path = "../../libs/prisma-value" }
schema-ast = { path = "../schema-ast" }

bigdecimal = "0.4"
chrono = { version = "0.4.38", default-features = false }
itertools = "0.13"
once_cell = "1.20.2"
regex = "1"
serde.workspace = true
serde_json.workspace = true
enumflags2 = "0.7"
indoc.workspace = true

# For the connector API.
lsp-types = "0.97.0"
url = "2.5.2"
