[package]
name = "psl"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin-psl-connectors = { path = "../builtin-connectors" }
psl-core = { path = "../psl-core" }

[dev-dependencies]
base64 = "0.22.1"
dissimilar = "1.0.9"
expect-test = "1.5.0"
indoc.workspace = true
either = "1.13.0"

[features]
sqlite-create-many = ["builtin-psl-connectors/sqlite-create-many"]
