[package]
name = "dmmf"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.5"
psl.workspace = true
serde.workspace = true
serde_json.workspace = true
schema = { path = "../schema" }
indexmap = { version = "2.6", features = ["serde"] }
prisma-models = { path = "../prisma-models" }

[dev-dependencies]
expect-test = "1.5.0"
indoc.workspace = true
pretty_assertions = "1"
flate2 = "1.0"
similar = { version = "2.6.0", features=["text", "inline", "bytes"] }
colored = "2.1.0"
itertools = "0.13.0"
