[package]
edition = "2021"
name = "prisma-models"
version = "0.0.0"

[dependencies]
psl.workspace = true
itertools = "0.13"
prisma-value = { path = "../../libs/prisma-value" }
bigdecimal = "0.4"
thiserror = "1.0"

uuid = { workspace = true, optional = true }
cuid = { version = "1.3", optional = true }
nanoid = { version = "0.4.0", optional = true }
chrono = { version = "0.4.38", features = ["serde"] }

[features]
# Support for generating default UUID, CUID, nanoid and datetime values. This
# implies random number generation works, so it won't compile on targets like
# wasm32.
default_generators = ["uuid/v4", "cuid", "nanoid"]
