[package]
name = "request-handlers"
version = "0.1.0"
edition = "2021"

[dependencies]
prisma-models = { path = "../prisma-models" }
query-core = { path = "../core" }
user-facing-errors = { path = "../../libs/user-facing-errors" }
psl.workspace = true
dmmf_crate = { path = "../dmmf", package = "dmmf" }
itertools = "0.13"
graphql-parser = { git = "https://github.com/prisma/graphql-parser" }
serde.workspace = true
serde_json.workspace = true
futures = "0.3"
indexmap = { version = "2.6.0", features = ["serde"] }
bigdecimal = "0.4.5"
thiserror = "1"
tracing = "0.1"
url = "2"
connection-string.workspace = true
once_cell = "1.20"

# mongodb-query-connector = { path = "../connectors/mongodb-query-connector", optional = true }
sql-query-connector = { path = "../connectors/sql-query-connector", optional = true }

[dev-dependencies]
insta = "1.40.0"
schema = { path = "../schema" }
codspeed-criterion-compat = "2.7.2"

[features]
default = []
mongodb = []
sql = ["sql-query-connector"]
js-connectors = ["sql-query-connector"]

mssql = ["sql", "sql-query-connector/mssql"]
mysql = ["sql", "sql-query-connector/mysql"]
postgresql = ["sql", "sql-query-connector/postgresql"]
sqlite = ["sql", "sql-query-connector/sqlite"]

[[bench]]
name = "query_planning_bench"
harness = false
