[package]
edition = "2021"
name = "sql-schema-describer"
version = "0.1.0"

[features]
mssql = ["quaint/mssql"]
mysql = ["quaint/mysql"]
postgresql = ["quaint/postgresql"]
sqlite = ["quaint/sqlite"]

[dependencies]
prisma-value = { path = "../../libs/prisma-value" }
psl.workspace = true

async-trait = "0.1.83"
bigdecimal = "0.4"
enumflags2 = { version = "0.7", features = ["serde"] }
indexmap = { version = "2.6.0", default-features = false }
indoc.workspace = true
once_cell = "1.20"
regex = "1"
serde.workspace = true
tracing = "0.1"
tracing-error = "0.2"
tracing-futures = "0.2"
quaint.workspace = true
either = "1.13.0"

[dev-dependencies]
expect-test = "1.5.0"
pretty_assertions = "1"
tokio.workspace = true
