[package]
edition = "2021"
name = "sql-query-connector"
version = "0.1.0"

[features]
vendored-openssl = ["quaint/vendored-openssl"]
js-connectors = []
mssql = ["user-facing-errors/mssql"]
mysql = ["user-facing-errors/mysql"]
postgresql = ["user-facing-errors/postgresql"]
sqlite = ["user-facing-errors/sqlite"]

[dependencies]
psl.workspace = true
anyhow = "1.0"
async-trait = "0.1"
bigdecimal = "0.4"
futures = "0.3"
itertools = "0.13"
once_cell = "1.20"
rand = "0.8"
serde_json = {version = "1.0", features = ["float_roundtrip"]}
thiserror = "1.0"
tokio.workspace = true
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"
uuid.workspace = true
opentelemetry = { version = "0.17", features = ["tokio"] }
tracing-opentelemetry = "0.17.4"
quaint.workspace = true

[dependencies.connector-interface]
package = "query-connector"
path = "../query-connector"

[dependencies.prisma-models]
path = "../../prisma-models"

[dependencies.prisma-value]
path = "../../../libs/prisma-value"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.cuid]
version = "1.3"

[dependencies.user-facing-errors]
features = ["sql"]
path = "../../../libs/user-facing-errors"
